src/Containers/About/About.scss
.app__about {
  flex: 1;
  width: 100%;
  flex-direction: column;
}

.app__profiles {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-row: auto;
  margin-top: 2rem;
  gap: 2rem;
  @media screen and(max-width:1200px) {
    grid-template-columns: 1fr 1fr 1fr;
  }
  @media screen and(max-width:900px) {
    grid-template-columns: 1fr 1fr;
  }
  @media screen and(max-width:640px) {
    grid-template-columns: 1fr;
  }
}
// .app__profiles {
//   display: flex;
//   justify-content: center;
//   align-items: flex-start;
//   flex-wrap: wrap;
//   margin-top: 2rem;
// }
.app__profile-parent {
  position: relative;
  width: 240px;
  height: 320px;
  transition: all 300ms ease-in;
  &:hover {
    scale: 1.1;
  }
}
.app__profile-background {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
  /* From https://css.glass */
  background: rgba(255, 255, 255, 0.32);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(6.1px);
  -webkit-backdrop-filter: blur(6.1px);
  border: 1px solid rgba(255, 255, 255, 0.47);
}

.app__profile-item {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-direction: column;
  padding: 1rem;
  border-radius: 1rem;
  @media screen and(max-width:640px) {
    width: 260px;
  }
  img {
    width: 100%;
    height: 170px;
    border-radius: 15px;
    object-fit: cover;
  }

  @media screen and (min-width: 2000px) {
    width: 370px;
    margin: 2rem 4rem;

    img {
      height: 320px;
    }
  }
}

